fix: card text consistent alignment on mobile (#665)
* fix: card text consistent alignment on mobile

* Code  Refactor

--- a/src/Components/Milestone.css
+++ b/src/Components/Milestone.css
@@ -18,4 +18,10 @@
   .p-timeline-event {
     display: inline;
   }
+
+  .p-card-title,
+  .p-card-subtitle,
+  .p-card-content {
+    text-align: center;
+  }
 }
